fixing constructors with static method instantiation